# fastapi-learning

./: readme.md
SQLmodel-postgressDataBase/uit-class-api/: pyproject.toml
SQLmodel-postgressDataBase/uit-class-api/uitclass/: main.py
advanced-query-path-parameter/uit-class-api/: README.md  pyproject.toml
advanced-query-path-parameter/uit-class-api/uitclass/: main.py
body-parameter/uit-class-api/: pyproject.toml
body-parameter/uit-class-api/todos/: main.py
dataFetchFrom_sqlModelPostgre/sqlTesting/: pass.md  pyproject.toml
dataFetchFrom_sqlModelPostgre/sqlTesting/todos/: main.py
dynamic-todo-app/app/: README.md  pyproject.toml
dynamic-todo-app/app/todos/: main.py
dynamic-todo-app/app/todos/config/: db.py
dynamic-todo-app/app/todos/models/: students.py
hello-fast-API/: README.md  pyproject.toml
hello-fast-API/todos/: main.py
hello-world/: pyproject.toml
project-1/data-fetching/: pass.md
project-1/data-fetching/todos/: main.py
pythonTypes-pydanticModel-annotated/uit-class-api/: pyproject.toml
pythonTypes-pydanticModel-annotated/uit-class-api/uitclass/: main.py
query-path-parameter/uit-api-class/: README.md  pyproject.toml
query-path-parameter/uit-api-class/uitclass/: main.py
read-sqlData/hello/: pyproject.toml
read-sqlData/hello/todos/: main.py
student-app-path-query-param/student-app/: README.md  pyproject.toml
student-app-path-query-param/student-app/studentapp/: main.py
